--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
+asgiref==3.8.1
+beautifulsoup4==4.13.4
+certifi==2025.6.15
+charset-normalizer==3.4.2
+coverage==7.9.1
 Django==5.2.3
-djangorestframework==3.14.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-lxml==4.9.3 
+django-environ==0.12.0
+djangorestframework==3.16.0
+gunicorn==23.0.0
+idna==3.10
+packaging==25.0
+psycopg2-binary==2.9.10
+requests==2.32.4
+soupsieve==2.7
+sqlparse==0.5.3
+typing_extensions==4.14.0
+urllib3==2.5.0
